--- a/OptiStochastique/rapport_continue.tex
+++ b/OptiStochastique/rapport_continue.tex
@@ -21,7 +21,7 @@
   \label{sec:Intr}
     \paragraph{} % (fold)
     \label{par:}
-    The goal of this project is to provided a set of the 22 constants to the
+    The goal of this project is to provide a set of the 22 constants to the
     function derived from article\cite{} to fit a gaussian function of $\mu=1.5$ and
     $\phi=0.2$.
 
@@ -36,7 +36,7 @@
       
       \paragraph{} % (fold)
       \label{par:}
-        The genome is defined as a array of the 22 doubles, so each value is mapped to a
+        The genome is defined as an array of 22 doubles, so each value is mapped to a
         specific product value as explained by the following table:
       % paragraph  (end)
       \\
@@ -64,8 +64,8 @@
       
       \paragraph{} % (fold)
       \label{par:}
-        For the result of this report we will refer to the each cell (ie. parameter that
-        we tried to optimise) of the array as genes.
+        For the result of this report we will refer to each cell of the array
+        (ie. parameter that we tried to optimize) as genes.
       % paragraph  (end)
     
     % subsubsection Genome definition (end)
@@ -74,8 +74,8 @@
       
       \paragraph{} % (fold)
       \label{par:}
-        For each genes, we defined theirs bounds as given by this project subject.
-        Here a quick reminder
+        For each gene, we defined its bounds as given by this project subject.
+        Here is a quick reminder:
       % paragraph  (end)
       
       \begin{figure}
@@ -118,7 +118,7 @@
       
       \paragraph{} % (fold)
       \label{par:}
-        We decided to use a sample the target function and the function to optimized
+        We decided to use a sample of the target function and the function to optimize
         with a sampling rate of 100, in the hope of having a very close approximation. 
         The fitness function used is a Root-mean-square deviation of the two vectors
         resulting from the sampling.
@@ -135,9 +135,9 @@
       \paragraph{} % (fold)
       \label{par:}
       
-        Since we are dealing with real value parameters, the crossover function is a
-        is a simple barycentric one, which is commonly found is a lot of continous
-        optimization by genetic algorithm.
+        Since we are dealing with real value parameters, the crossover function
+        is a simple barycentric one, which is commonly found in a lot of continous
+        optimization genetic algorithms.
       % paragraph  (end)
       
       \begin{algorithm}
@@ -160,10 +160,10 @@
     
       \paragraph{} % (fold)
       \label{par:}
-        Once again a simple technique was used. Giving a constant mutation parameter,
+        Once again a simple technique was used. Given a constant mutation parameter,
         for each gene of the genome a chance is given to add or substract a random value
-        within by this gene limit. We then avoid gene value going outside their bound by
-        capping the value by the gene value bounds.
+        within this mutation limit. We then avoid genes values going outside of their
+        bounds by capping the values by the genes value bounds.
       % paragraph  (end)
 
       \begin{algorithm}
@@ -190,7 +190,7 @@
     
     \paragraph{} % (fold)
     \label{par:}
-      To much of ours surprise, when we ran the optimization with an ahl concentration
+      To much of our surprise, when we ran the optimization with an ahl concentration
       from 0.0001 to 10, the resulting function was quite bad. So bad, in fact, that
       we quickly realized that the optimized function was constant to the average of
       the gaussian values.
@@ -199,15 +199,15 @@
     \paragraph{} % (fold)
     \label{par:}
       By empirecally modifying the range of ahl, we discover that given the basu's
-      function definition, there was no way that with only one set of parameters we will
-      have a good approxiamation on the whole definition range specified in the
+      function definition, there was no way that with only one set of parameters we would
+      obtain a good approximation on the whole definition range specified in the
       subject (i.e [0.0001,10]). 
     % paragraph  (end)
 
     \paragraph{} % (fold)
     \label{par:}
       However we did have some pretty good results on smaller definition range,
-      fortunately, for the most interresting range of [1,1.8] as demonstrated by the
+      fortunately, for the most interesting range of [1,1.8] as demonstrated by the
       following figure.
     % paragraph  (end)
 
@@ -233,7 +233,7 @@
       Crossover probability & 1 \\
       Mutation probability & 0.02\\
       Surviving parents & 100\%  \\
-      Surviving offspring& 100\% \\
+      Surviving offspring & 100\% \\
       Elitism & Strong \\
       Elite & 1 \\ \hline
       \emph{Result} & 1.17e+00 \\
@@ -250,9 +250,9 @@
    \label{par:}
    
    % paragraph  (end)
-     In the end, we felt that multiples set of parameters, by breaking the problem
+     In the end, we felt that multiple sets of parameters, by breaking the problem
      definition range into several continuous ones, must be used in order to have
-     a good approximate of the target function.
+     a good approximation of the target function.
 
    % section section name (end)
   
